--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,4 +21,4 @@ jobs:
           pip install scikit-learn keras tensorflow requests textblob binance datetime
 
       - name: Run BTC Prediction Script
-        run: python btc_predict.py
+        run: python LSTM2.py
